# spi-pipe-ng

./: README.md  meson.build  meson_options.txt  spi-pipe-ng.c
